robballen75-Salesforce/4-7-15/src/iTools State/Country Validation/objects/InSitu_ProvinceNames__c.object
<CustomObject>
    <description>An iTools Country/State Validation custom object that contains state/province names as defined by ISO 3166. Includes additional state/provincenames to support variations such as abbrs, common misspellings, alternate/former names, foreign language and decorated characters.</description>
    <fields>
        <fullName>CountryID__c</fullName>
        <description>Logical link to the associated country.</description>
        <label>CountryID</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsLeadName__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates the preferred State/Province name for the given language.</description>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsStandard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProvinceID__c</fullName>
        <label>ProvinceID</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Value__c</fullName>
        <description>Normalized version of the Province Name Value.</description>
        <label>Search Value</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Determines whether the Province Name is still actively used.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Short</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Full name of the Province.</description>
        <label>Value</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>The date on which the current version was installed for the organization.</description>
        <label>Version Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <defaultValue>9999</defaultValue>
        <description>The version number of the current content set installed for the organization.</description>
        <label>Version Number</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Province Name</label>
    <nameField>
        <label>Record ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Province Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>